# edital-summarizer

./: .gitignore  LICENSE  README.md  SAMPLES.md  SPRINT.md  _README.md  context.md  docs.md  edital-summarizer.7z  main.py  project.md  project_analysis.md  pyproject.toml  requirements.txt
docs/: DEVELOPERS.md  INSTRUCTIONS.md
docs/demos/: batch_process.sh  process_english_docs.sh  process_multiple_types.sh  process_single_edital.sh  test_samples.py
pipeline/: extractor.py  summarizer.py
src/: main.py
src/edital_summarizer/: __init__.py  agents.py  crew.py  main.py  models.py  schemas.py  types.py
src/edital_summarizer/config/: agents.py  agents.yaml  tasks.py  tasks.yaml
src/edital_summarizer/processors/: crew_processor.py  document.py  document_processor.py  metadata.py  summary.py
src/edital_summarizer/reports/: excel.py
src/edital_summarizer/tools/: document_extractor.py  document_processor.py  document_tools.py  file_tools.py  format_extractor.py  langchain_tools.py  quantity_tools.py  rag_tools.py
src/edital_summarizer/utils/: device_utils.py  logger.py  zip_handler.py
src/flow/: __init__.py  edital_flow.py  models.py
src/tools/: __init__.py  file_tools.py
src/utils/: __init__.py  extractor.py  logger.py  metadata.py
tests/: test_env.py
tests/crew/: test_threshold.py
tests/integration/: test_threshold.py
tests/schemas/: test_edital_response.py
tests/tools/: test_quantity_tools.py
