[project]
name = "edital_summarizer"
version = "0.1.0"
description = "edital-summarizer using crewAI"
authors = [{ name = "Thiago Martins", email = "thiago.fmartins@outlook.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "PyPDF2",
    "pandas",
    "openpyxl",
    "python-dotenv",
    "typer[all]",
    "pyyaml",
    "rich",
    "google-generativeai>=0.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "isort", "flake8", "mypy", "python-dotenv"]

[project.scripts]
edital_summarizer = "edital_summarizer.main:run"
run_crew = "edital_summarizer.main:run"
train = "edital_summarizer.main:train"
replay = "edital_summarizer.main:replay"
test = "edital_summarizer.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.crewai]
type = "crew"
