[project]
name = "edital_summarizer"
version = "0.2.0"
description = "Processador de editais utilizando a CrewAI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Thiago Martins", email = "t.martins@samsung.com" }]
dependencies = [
    "crewai>=0.28.0",
    "langchain>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.1.0",
    "anthropic>=0.5.0",
    "openpyxl>=3.1.2",
    "pypdf>=3.15.1",
    "pysbd>=0.3.4",
    "docx2txt>=0.8",
    "google-generativeai>=0.3.0", # Para o Gemini
    "litellm>=1.7.0",             # Para integração de vários providers com CrewAI
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
edital-summarizer = "edital_summarizer.main:run"

[tool.ruff]
line-length = 88
